# update-checker

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
src/update_checker/: configuration.py  globalvars.py  update_check.py
tests/: test_update_checker.py
update_checker/: config.py  trackers.py  update_check.py
